--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>566</width>
-    <height>224</height>
+    <height>261</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,6 +44,19 @@
        </widget>
       </item>
       <item>
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
        <widget class="QPushButton" name="pushButtonCloseDevice">
         <property name="minimumSize">
          <size>
@@ -69,25 +82,12 @@
         </property>
        </widget>
       </item>
-      <item>
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
      </layout>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton">
       <property name="text">
-       <string>Open Video</string>
+       <string>Convert Video into Frames</string>
       </property>
      </widget>
     </item>
@@ -110,13 +110,13 @@
        <widget class="QPushButton" name="pushButtonPlay">
         <property name="minimumSize">
          <size>
-          <width>120</width>
+          <width>80</width>
           <height>30</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>120</width>
+          <width>80</width>
           <height>30</height>
          </size>
         </property>
@@ -133,16 +133,29 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButtonStop">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonPause">
         <property name="minimumSize">
          <size>
-          <width>120</width>
+          <width>80</width>
           <height>30</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>120</width>
+          <width>80</width>
           <height>30</height>
          </size>
         </property>
@@ -154,7 +167,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Stop</string>
+         <string>Pause</string>
         </property>
        </widget>
       </item>
@@ -171,7 +184,47 @@
         </property>
        </spacer>
       </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonStop">
+        <property name="minimumSize">
+         <size>
+          <width>80</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>80</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Stop</string>
+        </property>
+       </widget>
+      </item>
      </layout>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pushButtonFrameByFrame">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Frame BY Frame</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
